--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jboss.bom</groupId>
+    <groupId>org.jboss.bom.wfk</groupId>
     <artifactId>jboss-bom-parent</artifactId>
-    <version>1.0.7-SNAPSHOT</version>
+    <version>2.3.0-redhat-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
-    <name>JBoss BOM Parent</name>
-    <description>Dependency Management BOM Parent</description>
+    <name>JBoss BOM WFK Parent</name>
+    <description>Dependency Management BOM Parent for WFK</description>
 
     <url>http://www.jboss.org</url>
     <issueManagement>
@@ -20,9 +20,9 @@
     </issueManagement>
 
     <scm>
-        <connection>scm:git:git@github.com:jboss-jdf/jboss-bom.git</connection>
-        <developerConnection>scm:git:git@github.com:jboss-jdf/jboss-bom.git</developerConnection>
-        <url>http://github.com/jboss-jdf/jboss-bom</url>
+        <connection>scm:git:git@github.com:jboss-developer/jboss-wfk-boms.git</connection>
+        <developerConnection>scm:git:git@github.com:jboss-developer/jboss-wfk-boms.git</developerConnection>
+        <url>http://github.com/jboss-developer/jboss-wfk-boms</url>
     </scm>
 
     <developers>
@@ -43,50 +43,18 @@
     </licenses>
 
     <properties>
-        <!-- Versions of Arquillian and Shrinkwrap -->
-        <version.org.jboss.arquillian>1.0.3.Final</version.org.jboss.arquillian>
-        <version.org.jboss.arquillian.extension.drone>1.1.1.Final</version.org.jboss.arquillian.extension.drone>
-        <version.org.jboss.arquillian.graphene>1.0.0.Final</version.org.jboss.arquillian.graphene>
-        <version.org.jboss.as.arquillian.container>7.1.3.Final</version.org.jboss.as.arquillian.container>
-        <version.org.jboss.shrinkwrap.resolver>2.0.0-beta-5</version.org.jboss.shrinkwrap.resolver>
         
         <!-- Version of Deltaspike -->
         <version.org.apache.deltaspike>0.4</version.org.apache.deltaspike>
 
-        <!-- Version of Drools -->
-        <version.org.jboss.drools>5.5.0.Final </version.org.jboss.drools>
-
         <!-- Versions of JBoss projects -->
-        <version.org.infinispan>5.2.4.Final</version.org.infinispan>
         <version.org.jboss.errai>2.3.2.Final</version.org.jboss.errai>
-        <version.org.jboss.jbossts.jbossjts>4.16.4.Final</version.org.jboss.jbossts.jbossjts>
-        <version.org.jboss.logging>3.1.0.GA</version.org.jboss.logging>
-        <version.org.jboss.logging.processor>1.0.3.Final</version.org.jboss.logging.processor>
-        <version.org.jboss.resteasy>2.3.5.Final</version.org.jboss.resteasy>
-        <version.org.jboss.security.negotiation>2.1.1.Final</version.org.jboss.security.negotiation>
         <version.org.jboss.spec.jboss.javaee.6.0>3.0.2.Final</version.org.jboss.spec.jboss.javaee.6.0>
         <version.org.richfaces>4.3.1.Final</version.org.richfaces>
-        <version.org.picketlink>2.5.0.Beta5</version.org.picketlink>
-
-        <!-- Version of Hibernate projects -->
-        <version.org.hibernate>4.2.0.Final</version.org.hibernate>
-        <version.org.hibernate.validator>4.2.0.Final</version.org.hibernate.validator>
-        <version.org.hibernate.search>4.2.0.Final</version.org.hibernate.search>
-        <version.org.hibernate.javax.persistence>1.0.1.Final</version.org.hibernate.javax.persistence>
-        <version.org.hibernate-jpamodelgen>1.2.0.Final</version.org.hibernate-jpamodelgen>
-
-        <!-- Version of Hibernate 3 projects -->
-        <version.org.hibernate3>3.6.10.Final</version.org.hibernate3>
-        <version.org.hibernate3.validator>3.1.0.GA</version.org.hibernate3.validator>
-        <version.org.hibernate3.commons.annotations>3.2.0.Final</version.org.hibernate3.commons.annotations>
 
         <!-- Versions of projects not directly under JBoss umbrella -->
         <version.com.google.gwt>2.5.1</version.com.google.gwt>
-        <version.junit>4.10</version.junit>
-        <version.log4j>1.2.16</version.log4j>
         <version.org.mvel>2.1.Beta8</version.org.mvel>
-        <version.org.osgi>4.2.0</version.org.osgi>
-        <version.org.testng>5.14.6</version.org.testng>
         <version.javax.validation>1.0.0.GA</version.javax.validation>
         
         <!-- Versions of Spring Projects-->
@@ -103,9 +71,7 @@
         <version.aspectj>1.7.1</version.aspectj>
 
         <!-- Versions of Maven plugins, user must setup them by his/her own -->
-        <version.surefire.plugin>2.10</version.surefire.plugin>
         <version.org.codehaus.mojo.gwt.maven.plugin>${version.com.google.gwt}</version.org.codehaus.mojo.gwt.maven.plugin>
-        <version.org.jboss.as.plugins.maven.plugin>7.3.Final</version.org.jboss.as.plugins.maven.plugin>
 
         <!-- Repository Deployment URLs -->
         <jboss.releases.repo.url>
@@ -117,21 +83,10 @@
     </properties>
 
     <modules>
-        <module>jboss-javaee-6.0-with-all</module>
         <module>jboss-javaee-6.0-with-deltaspike</module>
-        <module>jboss-javaee-6.0-with-drools</module>
         <module>jboss-javaee-6.0-with-errai</module>
-        <module>jboss-javaee-6.0-with-hibernate</module>
-        <module>jboss-javaee-6.0-with-hibernate3</module>
-        <module>jboss-javaee-6.0-with-infinispan</module>
-        <module>jboss-javaee-6.0-with-logging</module>
-        <module>jboss-javaee-6.0-with-osgi</module>
-        <module>jboss-javaee-6.0-with-resteasy</module>
         <module>jboss-javaee-6.0-with-richfaces</module>
-        <module>jboss-javaee-6.0-with-security</module>
         <module>jboss-javaee-6.0-with-spring</module>
-        <module>jboss-javaee-6.0-with-tools</module>
-        <module>jboss-javaee-6.0-with-transactions</module>
     </modules>
 
     <distributionManagement>
