--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
     </licenses>
 
     <properties>
+        <!-- Versions of Arquillian and Shrinkwrap -->
+        <version.org.jboss.arquillian>1.1.0.Final</version.org.jboss.arquillian>
+        <version.org.jboss.arquillian.extension.drone>1.1.1.Final</version.org.jboss.arquillian.extension.drone>
+        <version.org.jboss.arquillian.graphene>1.0.0.Final</version.org.jboss.arquillian.graphene>
+        <version.org.jboss.as.arquillian.container>7.1.3.Final</version.org.jboss.as.arquillian.container>
+        <version.org.jboss.shrinkwrap.resolver>2.0.0-beta-5</version.org.jboss.shrinkwrap.resolver>
         
         <!-- Version of Deltaspike -->
         <version.org.apache.deltaspike>0.4</version.org.apache.deltaspike>
@@ -50,7 +56,20 @@
         <!-- Versions of JBoss projects -->
         <version.org.jboss.errai>2.3.2.Final</version.org.jboss.errai>
         <version.org.jboss.spec.jboss.javaee.6.0>3.0.2.Final</version.org.jboss.spec.jboss.javaee.6.0>
-        <version.org.richfaces>4.3.1.Final</version.org.richfaces>
+        <version.org.richfaces>4.3.2.Final</version.org.richfaces>
+        <version.org.picketlink>2.5.0.Beta5</version.org.picketlink>
+
+        <!-- Version of Hibernate projects -->
+        <version.org.hibernate>4.2.0.Final</version.org.hibernate>
+        <version.org.hibernate.validator>4.2.0.Final</version.org.hibernate.validator>
+        <version.org.hibernate.search>4.3.0.Final</version.org.hibernate.search>
+        <version.org.hibernate.javax.persistence>1.0.1.Final</version.org.hibernate.javax.persistence>
+        <version.org.hibernate-jpamodelgen>1.2.0.Final</version.org.hibernate-jpamodelgen>
+
+        <!-- Version of Hibernate 3 projects -->
+        <version.org.hibernate3>3.6.10.Final</version.org.hibernate3>
+        <version.org.hibernate3.validator>3.1.0.GA</version.org.hibernate3.validator>
+        <version.org.hibernate3.commons.annotations>3.2.0.Final</version.org.hibernate3.commons.annotations>
 
         <!-- Versions of projects not directly under JBoss umbrella -->
         <version.com.google.gwt>2.5.1</version.com.google.gwt>
@@ -58,8 +77,8 @@
         <version.javax.validation>1.0.0.GA</version.javax.validation>
         
         <!-- Versions of Spring Projects-->
-        <version.spring>3.2.2.RELEASE</version.spring>
-        <version.spring.security>3.1.3.RELEASE</version.spring.security>
+        <version.spring>3.2.3.RELEASE</version.spring>
+        <version.spring.security>3.1.4.RELEASE</version.spring.security>
         <version.spring.webflow>2.3.2.RELEASE</version.spring.webflow>
         <version.spring.ws>2.1.2.RELEASE</version.spring.ws>
 
