--- a/jboss-javaee-6.0-with-hsearch/pom.xml
+++ b/jboss-javaee-6.0-with-hsearch/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>org.jboss.bom.wfk</groupId>
-        <version>2.4.0-redhat-1</version>
+        <version>2.4.0-redhat-SNAPSHOT</version>
         <artifactId>jboss-bom-parent</artifactId>
     </parent>
 
