--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.jboss.bom.wfk</groupId>
     <artifactId>jboss-bom-parent</artifactId>
-    <version>2.4.0-redhat-SNAPSHOT</version>
+    <version>2.4.0.Final-redhat-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -43,31 +43,37 @@
     </licenses>
 
     <properties>
+        <!-- Versions of Arquillian and Shrinkwrap -->
+        <version.org.jboss.arquillian>1.1.0.Final</version.org.jboss.arquillian>
+        <version.org.jboss.arquillian.extension.drone>1.1.1.Final</version.org.jboss.arquillian.extension.drone>
+        <version.org.jboss.arquillian.graphene>1.0.0.Final</version.org.jboss.arquillian.graphene>
+        <version.org.jboss.as.arquillian.container>7.2.0.Final</version.org.jboss.as.arquillian.container>
+        <version.org.jboss.shrinkwrap.resolver>2.0.0</version.org.jboss.shrinkwrap.resolver>
         
         <!-- Version of Deltaspike -->
         <version.org.apache.deltaspike>0.4</version.org.apache.deltaspike>
 
         <!-- Versions of JBoss projects -->
-        <version.org.jboss.errai>2.3.2.Final</version.org.jboss.errai>
-        <version.org.jboss.spec.jboss.javaee.6.0>3.0.2.Final</version.org.jboss.spec.jboss.javaee.6.0>
-        <version.org.richfaces>4.3.3.Final</version.org.richfaces>
+        <version.org.jboss.errai>2.3.2.Final-redhat-1</version.org.jboss.errai>
+        <version.org.jboss.spec.jboss.javaee.6.0>3.0.2.Final-redhat-4</version.org.jboss.spec.jboss.javaee.6.0>
+        <version.org.richfaces>4.3.4.Final-redhat-1</version.org.richfaces>
 
         <!-- Version of Hibernate Search -->
-        <version.org.hibernate.search>4.3.0.Final</version.org.hibernate.search>
+        <version.org.hibernate.search>4.3.0.Final-redhat-wfk-3</version.org.hibernate.search>
 
         <!-- Versions of projects not directly under JBoss umbrella -->
         <version.com.google.gwt>2.5.1</version.com.google.gwt>
         <version.org.mvel>2.1.Beta8</version.org.mvel>
-        <version.javax.validation>1.0.0.GA</version.javax.validation>
+        <version.javax.validation>1.0.0.GA-redhat-2</version.javax.validation>
 
         <!-- Versions of Spring Projects-->
         <version.spring>3.2.3.RELEASE</version.spring>
         <version.spring.security>3.1.4.RELEASE</version.spring.security>
         <version.spring.webflow>2.3.2.RELEASE</version.spring.webflow>
-        <version.spring.ws>2.1.2.RELEASE</version.spring.ws>
+        <version.spring.ws>2.1.3.RELEASE</version.spring.ws>
 
         <!-- Versions of Snowdrop -->
-        <version.snowdrop>2.0.5.Final</version.snowdrop>
+        <version.snowdrop>2.0.5.Final-redhat-2</version.snowdrop>
 
         <!-- Versions of Spring Third Party dependencies -->
         <version.aopalliance>1.0</version.aopalliance>
@@ -91,6 +97,7 @@
         <module>jboss-javaee-6.0-with-hsearch</module>
         <module>jboss-javaee-6.0-with-richfaces</module>
         <module>jboss-javaee-6.0-with-spring</module>
+        <module>jboss-javaee-6.0-with-tools</module>
     </modules>
 
     <distributionManagement>
