--- a/jboss-javaee-6.0-with-hsearch/pom.xml
+++ b/jboss-javaee-6.0-with-hsearch/pom.xml
@@ -49,9 +49,9 @@
             </dependency>
 
             <dependency>
-                <groupId>org.jboss.bom.eap</groupId>
+                <groupId>org.jboss.bom</groupId>
                 <artifactId>jboss-javaee-6.0-with-hibernate</artifactId>
-                <version>6.1.0-redhat-SNAPSHOT</version>
+                <version>1.0.4.Final-redhat-9</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
