--- a/jboss-javaee-6.0-with-hsearch/pom.xml
+++ b/jboss-javaee-6.0-with-hsearch/pom.xml
@@ -49,7 +49,7 @@
             </dependency>
 
             <dependency>
-                <groupId>org.jboss.bom</groupId>
+                <groupId>org.jboss.bom.eap</groupId>
                 <artifactId>jboss-javaee-6.0-with-hibernate</artifactId>
                 <version>${version.org.jboss.bom.eap}</version>
                 <type>pom</type>
