--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     </licenses>
 
     <properties>
-        <version.org.jboss.bom.eap>1.0.4.Final-redhat-9</version.org.jboss.bom.eap>
+        <version.org.jboss.bom.eap>6.2.0-build-1</version.org.jboss.bom.eap>
 
         <!-- Versions of Arquillian and Shrinkwrap -->
         <version.org.jboss.arquillian>1.1.0.Final</version.org.jboss.arquillian>
@@ -65,8 +65,10 @@
 
         <!-- Versions of projects not directly under JBoss umbrella -->
         <version.com.google.gwt>2.5.1</version.com.google.gwt>
-        <version.org.mvel>2.1.Beta8</version.org.mvel>
         <version.javax.validation>1.0.0.GA-redhat-2</version.javax.validation>
+        <version.junit>4.11</version.junit>
+        <version.org.mvel>2.1.Beta8</version.org.mvel>
+        <version.org.testng>5.14.6</version.org.testng>
 
         <!-- Versions of Spring Projects-->
         <version.spring>3.2.3.RELEASE</version.spring>
