--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,8 @@
     </licenses>
 
     <properties>
-        <version.org.jboss.bom.eap>6.2.0-build-1</version.org.jboss.bom.eap>
+        <!-- WFK 2.4.0 uses EAP 6.1.1 BOM -->
+        <version.org.jboss.bom.eap>1.0.4.Final-redhat-9</version.org.jboss.bom.eap>
 
         <!-- Versions of Arquillian and Shrinkwrap -->
         <version.org.jboss.arquillian>1.1.0.Final</version.org.jboss.arquillian>
