--- a/jboss-javaee-6.0-with-errai/pom.xml
+++ b/jboss-javaee-6.0-with-errai/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>org.jboss.bom.wfk</groupId>
-        <artifactId>jboss-bom-parent</artifactId>
+        <artifactId>jboss-wfk-bom-parent</artifactId>
         <version>2.4.0-build-SNAPSHOT</version>
     </parent>
 
