--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.jboss.bom.wfk</groupId>
-    <artifactId>jboss-bom-parent</artifactId>
+    <artifactId>jboss-wfk-bom-parent</artifactId>
     <version>2.4.0-build-SNAPSHOT</version>
 
     <packaging>pom</packaging>
