updated ARQ Drone for https://issues.jboss.org/browse/WFK2-210

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.jboss.bom.wfk</groupId>
     <artifactId>jboss-wfk-bom-parent</artifactId>
-    <version>2.4.0-redhat-1</version>
+    <version>2.4.0-redhat-2</version>
 
     <packaging>pom</packaging>
 
@@ -48,7 +48,7 @@
 
         <!-- Versions of Arquillian and Shrinkwrap -->
         <version.org.jboss.arquillian>1.1.0.Final</version.org.jboss.arquillian>
-        <version.org.jboss.arquillian.extension.drone>1.2.0.CR1</version.org.jboss.arquillian.extension.drone>
+        <version.org.jboss.arquillian.extension.drone>1.2.0.Final</version.org.jboss.arquillian.extension.drone>
         <version.org.jboss.arquillian.graphene>1.0.0.Final</version.org.jboss.arquillian.graphene>
         <version.org.jboss.arquillian.graphene2>2.0.0.CR1</version.org.jboss.arquillian.graphene2>
         <version.org.jboss.as.arquillian.container>7.2.0.Final</version.org.jboss.as.arquillian.container>
