Fix JDF-529 and WFK2-251. Change snowdrop-interceptors-core to snowdrop-interceptors in the pom dependency of the Spring BOM.

--- a/jboss-javaee-6.0-with-spring/pom.xml
+++ b/jboss-javaee-6.0-with-spring/pom.xml
@@ -267,7 +267,7 @@
             </dependency>
             <dependency>
                 <groupId>org.jboss.snowdrop</groupId>
-                <artifactId>snowdrop-interceptors-core</artifactId>
+                <artifactId>snowdrop-interceptors</artifactId>
                 <version>${version.snowdrop}</version>
             </dependency>
             <dependency>
