--- a/pom.xml
+++ b/pom.xml
@@ -43,8 +43,8 @@
     </licenses>
 
     <properties>
-        <!-- WFK 2.4.0 uses EAP 6.1.1 BOM -->
-        <version.org.jboss.bom.eap>1.0.4.Final-redhat-9</version.org.jboss.bom.eap>
+        <!-- WFK 2.4.0 uses EAP 6.2.0 BOM -->
+        <version.org.jboss.bom.eap>6.2.0.GA</version.org.jboss.bom.eap>
 
         <!-- Versions of Arquillian and Shrinkwrap -->
         <version.org.jboss.arquillian>1.1.0.Final</version.org.jboss.arquillian>
@@ -52,7 +52,7 @@
         <version.org.jboss.arquillian.graphene>1.0.0.Final</version.org.jboss.arquillian.graphene>
         <version.org.jboss.arquillian.graphene2>2.0.0.Final</version.org.jboss.arquillian.graphene2>
         <version.org.jboss.as.arquillian.container>7.2.0.Final</version.org.jboss.as.arquillian.container>
-        <version.org.jboss.shrinkwrap.resolver>2.0.0</version.org.jboss.shrinkwrap.resolver>
+        <version.org.jboss.shrinkwrap.resolver>2.0.2</version.org.jboss.shrinkwrap.resolver>
         
         <!-- Version of Deltaspike -->
         <version.org.apache.deltaspike>0.5</version.org.apache.deltaspike>
