--- a/jboss-javaee-6.0-with-errai/pom.xml
+++ b/jboss-javaee-6.0-with-errai/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.jboss.bom.wfk</groupId>
         <artifactId>jboss-wfk-bom-parent</artifactId>
-        <version>2.5.0-redhat-1</version>
+        <version>2.5.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jboss-javaee-6.0-with-errai</artifactId>
