--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.jboss.bom.wfk</groupId>
     <artifactId>jboss-wfk-bom-parent</artifactId>
-    <version>2.5.0-SNAPSHOT</version>
+    <version>2.5.0-build-1</version>
 
     <packaging>pom</packaging>
 
