--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <!-- Versions of JBoss projects -->
         <version.org.jboss.errai>2.3.2.Final-redhat-2</version.org.jboss.errai>
         <version.org.jboss.spec.jboss.javaee.6.0>3.0.2.Final-redhat-4</version.org.jboss.spec.jboss.javaee.6.0>
-        <version.org.richfaces>4.3.4.Final-redhat-1</version.org.richfaces>
+        <version.org.richfaces>4.3.5.Final</version.org.richfaces>
 
         <!-- Version of Hibernate Search -->
         <version.org.hibernate.search>4.4.0.Final-redhat-wfk-3</version.org.hibernate.search>
