--- a/jboss-javaee-6.0-with-spring4/pom.xml
+++ b/jboss-javaee-6.0-with-spring4/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.jboss.bom.wfk</groupId>
         <artifactId>jboss-wfk-bom-parent</artifactId>
-        <version>2.5.0-build-SNAPSHOT</version>
+        <version>2.5.0-build-3</version>
     </parent>
 
     <artifactId>jboss-javaee-6.0-with-spring4</artifactId>
