--- a/jboss-javaee-6.0-with-spring4/pom.xml
+++ b/jboss-javaee-6.0-with-spring4/pom.xml
@@ -47,7 +47,7 @@
                 <scope>import</scope>
             </dependency>
 
-            <!--  Spring 3rd party dependecies  -->
+            <!--  Spring 3rd party dependencies  -->
             <dependency>
                 <groupId>aopalliance</groupId>
                 <artifactId>aopalliance</artifactId>
