Prepare for development of UNDEFINED

--- a/jboss-javaee-6.0-with-hsearch/pom.xml
+++ b/jboss-javaee-6.0-with-hsearch/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>org.jboss.bom.wfk</groupId>
-        <version>2.6.0-build-1</version>
+        <version>UNDEFINED</version>
         <artifactId>jboss-wfk-bom-parent</artifactId>
     </parent>
 
