--- a/jboss-javaee-6.0-with-spring4/pom.xml
+++ b/jboss-javaee-6.0-with-spring4/pom.xml
@@ -154,6 +154,16 @@
                 <version>${version.spring4}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-messaging</artifactId>
+                <version>${version.spring4}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-websocket</artifactId>
+                <version>${version.spring4}</version>
+            </dependency>
             <!--  security  -->
             <dependency>
                 <groupId>org.springframework.security</groupId>
