--- a/jboss-javaee-6.0-with-tools/pom.xml
+++ b/jboss-javaee-6.0-with-tools/pom.xml
@@ -48,7 +48,7 @@
             </dependency>
             
             <!-- Shrinkwrap resolver
-                 override which is only used if we need newer version than what is in ARQ bom
+            override which is only used if we need newer version than what is in ARQ bom -->
             <dependency>
                 <groupId>org.jboss.shrinkwrap.resolver</groupId>
                 <artifactId>shrinkwrap-resolver-bom</artifactId>
@@ -56,7 +56,7 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            -->
+            
             <!-- Arquillian lets test you your applications in real environment -->
             <dependency>
                 <groupId>org.jboss.arquillian</groupId>
