--- a/jboss-javaee-6.0-with-richfaces/pom.xml
+++ b/jboss-javaee-6.0-with-richfaces/pom.xml
@@ -52,10 +52,8 @@
                  of Java EE 6 API -->
             <dependency>
                 <groupId>org.richfaces</groupId>
-                <artifactId>richfaces-bom</artifactId>
+                <artifactId>richfaces</artifactId>
                 <version>${version.org.richfaces}</version>
-                <scope>import</scope>
-                <type>pom</type>
             </dependency>
         </dependencies>
     </dependencyManagement>
