--- a/jboss-javaee-6.0-with-richfaces/pom.xml
+++ b/jboss-javaee-6.0-with-richfaces/pom.xml
@@ -55,6 +55,11 @@
                 <artifactId>richfaces</artifactId>
                 <version>${version.org.richfaces}</version>
             </dependency>
+            <dependency>
+                <groupId>org.atmosphere</groupId>
+                <artifactId>atmosphere-runtime</artifactId>
+                <version>${version.org.atmosphere}</version>
+        </dependency>
         </dependencies>
     </dependencyManagement>
 
