--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
         <!-- Versions of JBoss projects -->
         <version.org.jboss.spec.jboss.javaee.6.0>3.0.2.Final-redhat-13</version.org.jboss.spec.jboss.javaee.6.0>
         <version.org.richfaces>4.5.0.Final-redhat-1</version.org.richfaces>
+        <version.org.atmosphere>2.2.0</version.org.atmosphere>
 
         <!-- Version of Hibernate Search -->
         <version.org.hibernate.search>4.4.4.Final-redhat-wfk-1</version.org.hibernate.search>
